--- a/main.html
+++ b/main.html
@@ -3,12 +3,92 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Table</title>
-    <link rel="stylesheet" href="style.css" />
+    <title>Nested HTML Tables</title>
+    <style>
+      table, th, td {
+        border: 1px solid black;
+        border-collapse: collapse;
+      }
+      th {
+        text-align: center;
+      }
+      .black-cell {
+        background-color: black;
+        color: white;
+        font-weight: bold;
+        text-align: center;
+      }
+      a {
+        color: purple;
+        text-decoration: underline;
+      }
+    </style>
   </head>
   <body>
     <table style="width: 100%; height: 100%">
-      <!-- Your code here -->
+      <tr>
+        <!-- Left upper cell -->
+        <td style="width: 50%; vertical-align: top">
+          <table style="width: 100%">
+            <tr>
+              <th colspan="2">Nested Table 2</th>
+            </tr>
+            <tr>
+              <th>Column 1</th>
+              <th>Column 2</th>
+            </tr>
+            <tr>
+              <td>abc</td>
+              <td>def</td>
+            </tr>
+          </table>
+        </td>
+
+        <!-- Right upper cell -->
+        <td style="width: 50%; vertical-align: top">
+          <table style="width: 100%">
+            <tr>
+              <th>Nested Table 1</th>
+            </tr>
+            <tr>
+              <td>
+                <ul>
+                  <li>List item</li>
+                  <li>List item</li>
+                  <li>List item</li>
+                </ul>
+              </td>
+            </tr>
+          </table>
+        </td>
+      </tr>
+
+      <tr>
+        <!-- Bottom left cell -->
+        <td>
+          <table style="width: 100%">
+            <tr>
+              <th colspan="2">Nested Table 3</th>
+            </tr>
+            <tr>
+              <td><a href="#">Nested Table</a></td>
+              <td>Demo Continued</td>
+            </tr>
+          </table>
+        </td>
+
+        <!-- Bottom right cell -->
+        <td>
+          <table style="width: 100%">
+            <tr>
+              <th>Nested Table 4</th>
+            </tr>
+            <tr>
+              <td class="black-cell">HTML</td>
+            </tr>
+          </table>
+        </td>
+      </tr>
     </table>
   </body>
 </html>
